--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://producthire.net/job/senior-ux-researcher-5/'>Senior UX Researcher | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698327886-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328048-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328206-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329505-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329856-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
@@ -63,7 +87,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
+<h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -101,7 +125,7 @@
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -129,7 +153,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -143,7 +167,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -173,7 +197,7 @@
 <p><span class="badge badge-light">Chengdu, Sichuan</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://metalshub.join.com/jobs/464073-ui-ux-designer-m-f-d'>Job @ Metals Hub (D?sseldorf): UI-/UX-Designer (m/... | JOIN</a></h5> 
+<h5><a href='https://metalshub.join.com/jobs/464073-ui-ux-designer-m-f-d'>Job @ Metals Hub (D?sseldorf): UI-/UX-Designer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -181,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=sDzVhfw8&__jvsc=Twitter&bid=nm5DlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=oXAqbfwS&__jvst=Employee&__jvsd=sDzVhfw8&__jvsc=Twitter&bid=nm5DlMwG'>SugarCRM Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -209,7 +233,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -381,7 +405,7 @@
 <p><span class="badge badge-light">Austin, Texas  Austin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://producthire.net/job/ux-researcher-hiring-events/'>UX Researcher (Hiring Events) | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-researcher-hiring-events/'>UX Researcher (Hiring Events) | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -396,7 +420,7 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <p>Oct 10, 2019 ... At the heart of this strategy is a new design system, which will be used across the 
 customer experience. What You'll Be Doing. We're looking for a talented User?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aviso.workable.com/j/FD70A9A46D?viewed=true'>User Experience - UX Writer - Apply online - Aviso Wealth - Jobs</a></h5> 
+<h5><a href='https://aviso.workable.com/j/FD70A9A46D?viewed=true'>User Experience - UX Writer - Apply online - Aviso Wealth - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... As an advocate for our users, the role will help to shape the best customer 
 experience by ensuring our product is intuitive and engaging to use. Who you are
@@ -426,7 +450,7 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o28VafwZ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nqlckMwy'>ServiceNow Careers - Principal UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o28VafwZ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nqlckMwy'>ServiceNow Careers - Principal UX Designer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -436,7 +460,7 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zscaler/job/oGzRafw0'>Zscaler Careers - Software Engineer - UX Design</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zscaler/job/oGzRafw0'>Zscaler Careers - Software Engineer - UX Design</a></h5> 
 <p><span class="badge badge-light">San Jose, California  San Jose, CA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -448,30 +472,6 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
     UX Designer at Celtra, Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/5kkhrbhnpx6ts97zq7pb6oq8mh'>UX Strategist | Knak Digital</a></h5> 
-<p><span class="badge badge-light">Baltimore, MD</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/5kkhrbhnpx6ts97zq7pb6oq8mh/uxstrategist'>UX Strategist | Knak Digital</a></h5> 
-<p><span class="badge badge-light">Baltimore, MD</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698105270-ux-designer-uplay-'>Ubisoft UX Designer (Uplay) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Chengdu, Sichuan</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ouOUafw6&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nUr5jMw0'>ServiceNow Careers - Senior Software Engineer- UI/UX platform</a></h5> 
-<p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4482124002'>Job Application for Senior UI/UX Designer at KeepTruckin</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698102051-ux-designer-j000597-'>outsourced UX Designer(J000597) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Philippines  Australia Sydney</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
